--- a/FrontEnd/contenido.html
+++ b/FrontEnd/contenido.html
@@ -1,23 +1,11 @@
 <html>
-    <p>Buenas tardes,</p>
-    <p>A continuacion vamos a imprimir una tabla.<br /><br /></p>
-    <table style="border-collapse: collapse; width: 100%; height: 36px;" border="1">
-    <tbody>
-    <tr style="height: 14px;">					
-    </tr>
-    <tr style="height: 14px;">
-    <td style="width: 80%; height: 14px;">Texto1:</td>
-    </tr>
-    <tr style="height: 14px;">
-    <td style="width: 80%; height: 14px;">Texto2:</td>
-    </tr>
-    <tr style="height: 14px;">
-    <td style="width: 80%; height: 14px;">Texto3:</td>
-    </tr>
-    <tr style="height: 14px;">
-    <td style="width: 80%; height: 14px;">Texto4:</td>
-    </tr>
-    </tbody>
-    </table>
-    <p>&nbsp;</p>
+    </head>
+    <title>Validacion de cuenta</title>
+    </head>
+    <body>
+    <p>Ya casi puedes restablecer tu clave</p>
+    <br>
+    <a href="http://localhost/Linea_Prof_3/Banco_Project/FrontEnd/RestablecerClave.php">Restablecer Clave</a>
+    <br>
+    </body>
 </html>
